# docs/swagger.yaml
@@ -14,6 +14,18 @@ servers:
   - url: 'http://localhost:8001'
 
 paths:
+  /api/v1/metrics:
+    get:
+      summary: Metrics.
+      description: >-
+        Return metrics in prometheus text format.
+      responses:
+        200:
+          description: ok
+          content:
+            text/plain:
+              schema:
+                type: string
   /api/v1/instances/{instance_name}:
     get:
       summary: Status information of an instance.
@@ -223,6 +235,14 @@ paths:
                 stream_config:
                   description: specifies an optional stream configuration file (absolute path) 
                   type: string
+                metric_flags:
+                  description: flags that allows to specify what is exposed as metric
+                  type: array
+                  items:
+                    type: string
+                    enum:
+                      - session_counters
+                      - interfaces
             example:
               {
                 "logging": true,
